- Endpoint for removing photo
